modified:   Stylesheets/index.css         modified:   index.html

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
           <li>Figma</li>
           <li>VSCode</li>
           <li>Git/Github</li>
+          <div class="skills">
+            <div class="skills-html"> Html - 90%</div>
+            <div class="skills-css">Css - 80%</div>
+            <div class="skills-js"> JavaScript - 65%</div>
+            <div class="skills-php"> React - 40%</div>
+          </div>
         </ul>
     </section>
       
