modified:   Stylesheets/index.css         modified:   index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 
     <section id="my-skills" class="my-skills">
         <h2>My skills</h2>
-        <h5></h5>
         <ul> 
           <li>Management & Planning</li>
           <li>Housekeeping & Operations Control</li>
@@ -79,11 +78,13 @@
           <li>Figma</li>
           <li>VSCode</li>
           <li>Git/Github</li>
+          <p></p>
+          <h5>Programming skills development:</h5>
           <div class="skills">
-            <div class="skills-html"> Html - 90%</div>
-            <div class="skills-css">Css - 80%</div>
-            <div class="skills-js"> JavaScript - 65%</div>
-            <div class="skills-php"> React - 40%</div>
+            <div class="skills-html"> Html &#8594 90%</div>
+            <div class="skills-css">Css &#8594 80%</div>
+            <div class="skills-js"> JavaScript &#8594 65%</div>
+            <div class="skills-php"> React &#8594 40%</div>
           </div>
         </ul>
     </section>
