new file:   .vscode/settings.json         modified:   Stylesheets/index.css         modified:   index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="skills-html"> Html &#8594 90%</div>
             <div class="skills-css">Css &#8594 80%</div>
             <div class="skills-js"> JavaScript &#8594 65%</div>
-            <div class="skills-php"> React &#8594 40%</div>
+            <div class="skills-react"> React &#8594 40%</div>
           </div>
         </ul>
     </section>
