--- a/index.html
+++ b/index.html
@@ -246,11 +246,16 @@
 	        <i class="fab fa-github"></i>GitHub</a>
       </div>
     </section>
+    <section class="talk-to-me">
+      <h2><a href="./form.html"
+        target="_blank"
+        class="btn contact-details"><h2>&#8594 talk to me &#8592</h2></a></h2>
+    </section>
+  <p class="end">CopyRight By Renier Coetzer</p>
   </main>
           <script src="./scripts.js"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
             crossorigin="anonymous"></script>
-          <
 </body>
 </html>
