--- a/form.html
+++ b/form.html
@@ -55,7 +55,7 @@
         <textarea name="user_message" id="msg" optional></textarea>
         </p>
 
-        <button><input type="submit"></button>
+        <button class="form-button"><input type="submit"></button>
 
     </form> 
 </body>
