--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <img class="photo-profile" src="/Images/Reniercv.jpg" alt="photo-profile">
         <h2>Welcome to my page</h2>
         <h5>I am a seasoned Production Supervisor with over ten years of professional experience. 
-          Presently, I hold the position of Production Supervisor at <a href="http://www.oddy.co.za/">Welfit Oddy.</a> 
+          Presently, I hold the position of a Production Supervisor at <a href="http://www.oddy.co.za/">Welfit Oddy.</a> 
           I consistently demonstrate a strong commitment to surpassing company objectives, 
           frequently going above and beyond expectations. Alongside my role, I am actively pursuing 
           studies in software development, showcasing my dedication and drive to enhance my skill set.
