new file:   Images/RENIER 1pager 2023.pdf         deleted:    Images/Renier Coetzer CV.pdf         modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="hero-h1">Hey I'm 
               <p>Renier Coetzer</h1></p>
               <p class="hero-p">A Production Supervisor</p>
-                <a id="nav-link" class="nav-link-hero" href="/Images/Renier Coetzer CV.pdf">Download CV</a>
+                <a id="nav-link" class="nav-link-hero" href="/Images/RENIER 1pager 2023.pdf">Download CV</a>
         </div>
     </div>
 
