deleted:    Images/RENIER 1pager 2023.pdf         new file:   Images/Renier Coetzer CV2023.pdf         new file:   Images/Renier Coetzer CV2023Support.pdf         deleted:    Images/cv suppor 2019.pdf         modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1 class="hero-h1">Hey I'm 
               <p>Renier Coetzer</h1></p>
               <p class="hero-p">A Production Supervisor</p>
-                <a id="nav-link" class="nav-link-hero" href="/Images/RENIER 1pager 2023.pdf">Download CV</a>
+                <a id="nav-link" class="nav-link-hero" href="/Images/Renier Coetzer CV2023.pdf">Download CV</a>
         </div>
     </div>
 
@@ -213,7 +213,7 @@
       </button>
       </div>
         
-      <div class="cv-support">Please click <a href="/Images/cv suppor 2019.pdf">this link</a> for all relevant certificates.</div>
+      <div class="cv-support">Please click <a href="/Images/Renier Coetzer CV2023Support.pdf">this link</a> for all relevant certificates.</div>
     </section>
     <section id="my-contact" class="my-contact">
         <h2>Contact</h2>
